# JobHunt-AI

./: README.md
Backend/: main.py  pyproject.toml  requirements.txt  test.py  test_custom.py
Backend/agents/: Linkedin_agent.py  ai_matcher.py  career_scraper.py  contact_finder.py  job_scraper.py  local_city_job_scraper.py  resume_parser.py
Backend/db/: connection.py
Frontend/: bun.lockb  package-lock.json  package.json  tailwind.config.js
Frontend/src/: App.css  App.tsx  index.css
Frontend/src/components/layout/: Layout.tsx  Navbar.tsx
Frontend/src/components/ui/: Button.tsx  Card.tsx
Frontend/src/lib/: api.ts
Frontend/src/pages/: Dashboard.tsx  Detail.tsx  Home.tsx  Login.tsx  Products.tsx
